--- a/src/main/resources/templates/findMyLunch.html
+++ b/src/main/resources/templates/findMyLunch.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p th:text="'Hello World!'" />
+test
+<p th:text="Hello World!" />
+
+
 </body>
 </html>
