--- a/src/main/resources/templates/findMyLunch.html
+++ b/src/main/resources/templates/findMyLunch.html
@@ -5,9 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-test
-<p th:text="Hello World!" />
-
-
+<p th:text="'Hello, World'" />
 </body>
 </html>
