Got basic html working

--- a/src/main/resources/templates/findMyLunch.html
+++ b/src/main/resources/templates/findMyLunch.html
@@ -1,10 +1,38 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Find My Lunch</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p th:text="'Hello, World'" />
+
+<div class="row">
+    <div class="col-sm-2">Business Purpose</div>
+    <div class="col-sm-1">Serve Date</div>
+    <div class="col-sm-1">Room Name</div>
+    <div class="col-sm-1">Number of People</div>
+    <div class="col-sm-2">Food Type</div>
+    <div class="col-sm-3">Special Requests</div>
+    <div class="col-sm-2">Vendor Name</div>
+</div>
+
+<div class="row" th:each="request : ${foodRequests}">
+    <div class="col-sm-2" th:text="${request.businessPurpose}"/>
+    <div class="col-sm-1" th:text="${request.serveDate}"/>
+    <div class="col-sm-1" th:text="${request.room.roomName}"/>
+    <div class="col-sm-1" th:text="${request.numberOfPeople}"/>
+    <div class="col-sm-2" th:text="${request.food}"/>
+    <div class="col-sm-3" th:text="${request.dietaryConcerns}"/>
+    <div class="col-sm-2" th:text="${request.vendorName}"/>
+</div>
+
 </body>
 </html>
